refactor test write to flatten file